<resources>
    <string name="app_name">SNS</string>
    <string name="str_writer">김유신</string>
    <string name="str_post">나는 오늘 밥을 먹었다. 너무 맛있었다. 근데 배가 불러서 다 먹지를 못했다. 주머니에 넣어서 싸가고 싶었는데 엄마한테 혼날 뻔했다. 억울해. 집에나 가야지.</string>
    <string name="str_dsc1">게시글 이미지</string>
    <string name="str_dsc2">좋아요 버튼 이미지</string>
    <string name="str_dsc3">싫어요 버튼 이미지</string>
    <string name="str_comment1_writer">강감찬</string>
    <string name="str_comment1">당연히 혼나지 바보 멍청아</string>
    <string name="str_comment2_writer">이순신</string>
    <string name="str_comment2">장보고 안 와?</string>
    <string name="str_like">52</string>
    <string name="str_dislike">7</string>
    <string name="str_toast_like">좋아요!</string>
    <string name="str_toast_dislike">싫어요..</string>
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="into">등록하기</string>
    <string name="compare_id">아이디 중복 확인</string>
    <string name="check">확인</string>
    <string name="mail">이메일</string>
    <string name="compare_password">비밀번호 확인</string>
 <!-- &#160; 으로 맨 앞 공백 추가 가능. 그냥 작성하면 앞 공백은 지워져서 찾았어요! -->
    <string name="post_writer_who">&#160;님이 포스트를 올렸습니다.</string>
    <string name="post_description">meverse 상에서 새 포스트를 올리면 여기에 글이 작성됩니다. meverse 상에서 새 포스트를 올리면 여기에 글이 작성됩니다. meverse 상에서 새 포스트를 올리면 여기에 글이 작성됩니다. meverse 상에서 새 포스트를 올리면 여기에 글이 작성됩니다. meverse 상에서 새 포스트를 올리면 여기에 글이 작성됩니다. meverse 상에서 새 포스트를 올리면 여기에 글이 작성됩니다.</string>
    <string name="post_description_2">meverse 상에서 새 포스트를 올리면 여기에 글이 작성됩니다.</string>
    <string name="profile_name_tag">이름:&#160;</string>
    <string name="profile_id_tag">아이디:&#160;</string>
    <string name="profile_introduction_tag">자기 소개</string>
    <string name="profile_introduction_content">안녕하세요. 반갑습니다.</string>
</resources>