<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bt_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_meverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_meverse"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/tv_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/str_writer"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_post"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/str_dsc1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_writer" />

        <TextView
            android:id="@+id/tv_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/str_post"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_post" />

        <ImageView
            android:id="@+id/bt_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/str_dsc2"
            android:src="@drawable/selector_like"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_post" />

        <TextView
            android:id="@+id/tv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="53"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/bt_like"
            app:layout_constraintTop_toTopOf="@+id/bt_like"
            app:layout_constraintBottom_toBottomOf="@+id/bt_like"/>

        <ImageView
            android:id="@+id/bt_dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/str_dsc3"
            android:src="@drawable/selector_dislike"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/tv_like"
            app:layout_constraintStart_toEndOf="@+id/tv_like"
            app:layout_constraintTop_toTopOf="@+id/tv_like" />

        <TextView
            android:id="@+id/tv_dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="1"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/bt_dislike"
            app:layout_constraintTop_toTopOf="@+id/bt_dislike"
            app:layout_constraintBottom_toBottomOf="@+id/bt_dislike" />

        <TextView
            android:id="@+id/tv_comment1_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/str_comment1_writer"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_like" />

        <TextView
            android:id="@+id/tv_comment1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/str_comment1"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_comment1_writer"
            app:layout_constraintStart_toEndOf="@+id/tv_comment1_writer"
            app:layout_constraintTop_toTopOf="@+id/tv_comment1_writer" />

        <TextView
            android:id="@+id/tv_comment2_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/str_comment2_writer"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_comment1_writer"/>

        <TextView
            android:id="@+id/tv_comment2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/str_comment2"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_comment2_writer"
            app:layout_constraintStart_toEndOf="@+id/tv_comment2_writer"
            app:layout_constraintTop_toTopOf="@+id/tv_comment2_writer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>